# pyrformance

./: .gitignore  README.md  Taskfile.yml  benchmarks.py  pyproject.toml
pyrformance/: __init__.py  _cli.py
pyrformance/rules/: README.md  all-to-and.yaml  any-all-laziness.yaml  any-to-or.yaml  dict-fromkeys.yaml  dict-merge.yaml  dict-update.yaml  double-call.yaml  double-startswith.yaml  elif.yaml  filter.yaml  for-compr.yaml  if-len.yaml  itertools-chain.yaml  join-iters-to-list.yaml  join-iters-to-tuple.yaml  join-iters.yaml  map.yaml  max-to-if.yaml  min-to-if.yaml  re-compile.yaml  set-contains.yaml  str-concat.yaml  str-removeprefix.yaml  str-split-maxsplit.yaml
tests/: test_rules.py
